# tinylr

./: CMakeLists.txt  README.md  benchmark.cpp  test.cpp
include/tinylr/: test.hpp  tinylr.hpp
